--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DB_URL=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:5432/postgres
 DB_USER=postgres.gmnohwwiaplvwdgmheid
-DB_PASSWORD=TU_PASSWORD_AQUI
+DB_PASSWORD=tpgrupo28
+
 
