--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # Configuración de JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=auto
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
